force-app/main/default/objects/Slate_Staging_Record__c/Slate_Staging_Record__c.object-meta.xml
<CustomObject>
    <label>Slate Staging Record</label>
    <nameField>
        <displayFormat>SSR-{0000}</displayFormat>
        <label>Slate Staging Records Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slate Staging Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>