force-app/main/default/objects/Slate_Staging_Record__c/fields/Application_Lead__c.field-meta.xml
<CustomField>
    <fullName>Application_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Slate Staging Records</relationshipLabel>
    <relationshipName>Slate_Staging_Records</relationshipName>
    <type>Lookup</type>
</CustomField>