force-app/main/default/objects/Slate_Staging_Record__c/fields/Application_Program__c.field-meta.xml
<CustomField>
    <fullName>Application_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Program</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Slate Staging Records</relationshipLabel>
    <relationshipName>Slate_Staging_Records</relationshipName>
    <type>Lookup</type>
</CustomField>