force-app/main/default/objects/Slate_Staging_Record__c/fields/Application_Term__c.field-meta.xml
<CustomField>
    <fullName>Application_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Term</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Slate Staging Records</relationshipLabel>
    <relationshipName>Slate_Staging_Records</relationshipName>
    <type>Lookup</type>
</CustomField>