force-app/main/default/objects/Slate_Staging_Record__c/fields/AppStatus__c.field-meta.xml
<CustomField>
    <fullName>AppStatus__c</fullName>
    <label>AppStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>