force-app/main/default/objects/Slate_Staging_Record__c/fields/Awaiting_Submission__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Awaiting Submission?</label>
    <type>Checkbox</type>
</CustomField>