force-app/main/default/objects/Slate_Staging_Record__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <label>CreatedDate</label>
    <type>Date</type>
</CustomField>