force-app/main/default/objects/Slate_Staging_Record__c/fields/CSU_Id__c.field-meta.xml
<CustomField>
    <fullName>CSU_Id__c</fullName>
    <label>CSU Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>