force-app/main/default/objects/Slate_Staging_Record__c/fields/CurrentProgramCode__c.field-meta.xml
<CustomField>
    <fullName>CurrentProgramCode__c</fullName>
    <label>CurrentProgramCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>