force-app/main/default/objects/Slate_Staging_Record__c/fields/CurrentSiteCode__c.field-meta.xml
<CustomField>
    <fullName>CurrentSiteCode__c</fullName>
    <label>CurrentSiteCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>