force-app/main/default/objects/Slate_Staging_Record__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>