force-app/main/default/objects/Slate_Staging_Record__c/fields/DevicePrimaryPhone1__c.field-meta.xml
<CustomField>
    <fullName>DevicePrimaryPhone1__c</fullName>
    <label>DevicePrimaryPhone1</label>
    <type>Phone</type>
</CustomField>