force-app/main/default/objects/Slate_Staging_Record__c/fields/Email1__c.field-meta.xml
<CustomField>
    <fullName>Email1__c</fullName>
    <label>Email1</label>
    <type>Email</type>
</CustomField>