force-app/main/default/objects/Slate_Staging_Record__c/fields/Email2__c.field-meta.xml
<CustomField>
    <fullName>Email2__c</fullName>
    <label>Email2</label>
    <type>Email</type>
</CustomField>