force-app/main/default/objects/Slate_Staging_Record__c/fields/Email3__c.field-meta.xml
<CustomField>
    <fullName>Email3__c</fullName>
    <label>Email3</label>
    <type>Email</type>
</CustomField>