force-app/main/default/objects/Slate_Staging_Record__c/fields/Existing_Application__c.field-meta.xml
<CustomField>
    <fullName>Existing_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Application</label>
    <referenceTo>hed__Application__c</referenceTo>
    <relationshipLabel>Slate Staging Records</relationshipLabel>
    <relationshipName>Slate_Staging_Records</relationshipName>
    <type>Lookup</type>
</CustomField>