force-app/main/default/objects/Slate_Staging_Record__c/fields/FulfilledChecklistItems__c.field-meta.xml
<CustomField>
    <fullName>FulfilledChecklistItems__c</fullName>
    <label>FulfilledChecklistItems</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>