force-app/main/default/objects/Slate_Staging_Record__c/fields/MissingChecklistItems__c.field-meta.xml
<CustomField>
    <fullName>MissingChecklistItems__c</fullName>
    <label>MissingChecklistItems</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>