force-app/main/default/objects/Slate_Staging_Record__c/fields/OfficialGPA__c.field-meta.xml
<CustomField>
    <fullName>OfficialGPA__c</fullName>
    <label>OfficialGPA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>