force-app/main/default/objects/Slate_Staging_Record__c/fields/Program_Missing__c.field-meta.xml
<CustomField>
    <fullName>Program_Missing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Missing</label>
    <type>Checkbox</type>
</CustomField>