force-app/main/default/objects/Slate_Staging_Record__c/fields/Slate_Id__c.field-meta.xml
<CustomField>
    <fullName>Slate_Id__c</fullName>
    <label>Slate Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>