force-app/main/default/objects/Slate_Staging_Record__c/fields/Undergrad_Status__c.field-meta.xml
<CustomField>
    <fullName>Undergrad_Status__c</fullName>
    <label>Undergrad Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>